--- a/OG_Martanov_bot_v2-Copy1.ipynb
+++ b/OG_Martanov_bot_v2-Copy1.ipynb
@@ -94,7 +94,7 @@
     "from telebot import types\n",
     "from random import randint\n",
     "\n",
-    "bot = telebot.TeleBot(\"5884811891:AAFr84nE7OzEOlWR_NQc73QYzBCsF7yT29Y\")\n",
+    "bot = telebot.TeleBot(\"ваш токен\")\n",
     "\n",
     "@bot.message_handler(commands=['start'])\n",
     "def start_message(message):\n",
